--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo Build started on 'date'
-      - mvn install
+      - ./gradlew clean build publish
   post_build:
     commands:
       - echo Build completed on 'date'
