--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,11 +11,11 @@ phases:
       - echo Nothing to do in the pre_build phase
   build:
     commands:
-      - echo Build started on 'date'
+      - echo Build started on $(date)
       - ./gradlew clean build publish
   post_build:
     commands:
-      - echo Build completed on 'date'
+      - echo Build completed on $(date)
 artifacts:
   files:
-    - 'target/ccdemo.war'
+    - 'build/libs/*.war'
