--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,6 +9,7 @@ phases:
       - wget https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz
       - mkdir -p /usr/lib/jvm
       - tar -xvzf amazon-corretto-21-x64-linux-jdk.tar.gz -C /usr/lib/jvm
+      - mv /usr/lib/jvm/amazon-corretto-21* /usr/lib/jvm/amazon-corretto-21
       - export JAVA_HOME=/usr/lib/jvm/amazon-corretto-21
       - export PATH=$JAVA_HOME/bin:$PATH
       - java -version
